Archive2/bf/11f0bc976ebb39/output
main.cpp: In function 'int main()':
main.cpp:134:17: error: a template-id may not appear in a using-declaration
     using Pond::Geese<int>;
                 ^
